# libnat20

./: .clang-format  .gitignore  CMakeLists.txt
.github/license-check/: header-apache2-or-gpl2-hashtag.txt  header-apache2-or-gpl2-semicolon.txt  header-apache2-or-gpl2-slash-star.txt  header-apache2-semicolon.txt  license-config.json
.github/workflows/: build-and-deploy-docs.yml  clang-format-lint.yml  cmake-build-and-test.yml  ensure-sha-pinned-actions.yml  lcov-test-coverage-report.yml
cmake/: LibNat20Config.cmake.in
include/nat20/: asn1.h  cbor.h  constants.h  cose.h  crypto.h  cwt.h  endian.h  error.h  functionality.h  limits.h  oid.h  open_dice.h  stream.h  types.h  x509.h  x509_ext_open_dice_input.h  x509_ext_tcg_dice_tcb_freshness.h  x509_ext_tcg_dice_tcb_info.h  x509_ext_tcg_dice_ueid.h
include/nat20/crypto/nat20/: crypto.h  rfc6979.h  sha.h
include/nat20/crypto_bssl/: crypto.h
include/nat20/service/: gnostic.h  gnostic_message_dispatch.h  messages.h  proxy.h  service.h
include/nat20/testing/: test_bssl_utils.h  test_utils.h  test_vector_reader.h
src/core/: asn1.c  cbor.c  cose.c  cwt.c  functionality.c  oid.c  stream.c  x509.c  x509_ext_open_dice_input.c  x509_ext_tcg_dice_tcb_freshness.c  x509_ext_tcg_dice_tcb_info.c  x509_ext_tcg_dice_ueid.c
src/core/test/: asn1.cpp  cbor.cpp  cose.cpp  cwt.cpp  functionality.cpp  oid.cpp  stream.cpp  test.cpp  test_vectors.cpp  test_vectors.h  x509.cpp  x509_ext_open_dice_input.cpp  x509_ext_tcg_dice_tcb_freshness.cpp  x509_ext_tcg_dice_tcb_info.cpp  x509_ext_tcg_dice_ueid.cpp
src/core/test/test_data/: functionality_x509_test_vectors.txt  opendice_attestation_test_vectors.txt
src/crypto/: crypto_boringssl.cpp
src/crypto/nat20/: crypto.c  rfc6979.c  sha256.c  sha512.c
src/crypto/test/: crypto.cpp  crypto_boringssl.cpp  crypto_boringssl.h  crypto_implementations_to_test.h  crypto_nat20.cpp  crypto_nat20.h  test.cpp  test_vectors.cpp  test_vectors.h
src/service/: client_stateless.c  gnostic.c  gnostic_main.c  gnostic_message_dispatch.c  messages.c  messages.cddl  proxy.c  service.c
src/service/test/: messages.cpp  test.cpp
src/testing/: test_bssl_utils.cpp  test_utils.cpp  test_vector_reader.cpp
tools/: test_service.py
